--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "mocha": "^5.0.0",
     "react": "^16.2.0",
     "react-addons-test-utils": "^15.6.2",
